# sdk-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  compile_protos.sh  dev_runner.py  mypy.ini  prefab_pb2.pyi  pyproject.toml  reforge.proto  ruff.toml  update_version.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
examples/gunicorn/: gunicorn_conf.py  (+2 more)
examples/standard-logging/: README.md  pyproject.toml  standard_logging_example.py
examples/structlog/: README.md  pyproject.toml  structlog_example.py
reforge_python/: __init__.py  config_sdk_interface.py  feature_flag_sdk.py  options.py  sdk.py
sdk_reforge/: __init__.py  _internal_logging.py  _requests.py  _sse_connection_manager.py  _sse_watchdog.py  config_loader.py  config_sdk.py  config_sdk_interface.py  sdk.py
tests/: helpers.py  test.datafile.json  test_api_client.py  test_config_loader.py  test_config_parser.py  test_config_resolver.py  test_config_sdk.py  test_config_value_unwrapper.py  test_config_value_wrapper.py  test_context.py  test_context_shape.py  test_context_shape_aggregator.py  test_criteria_evaluator.py  test_encryption.py  test_feature_flag_sdk.py  test_forking.py  test_integration.py  test_log_level.py  test_logging.py  test_options.py  test_sdk.py  test_semantic_version.py  test_simple_criterion_evaluators.py  test_sse_connection_manager.py  test_sse_watchdog.py  test_telemetry_context_accumulator.py  test_telemetry_evaluation_rollup.py  test_telemetry_manager.py  test_weighted_value_resolver.py  test_yaml_parser.py  test_zero_byte_configs.py
