[tool.poetry]
name = "structlog-example"
version = "0.1.0"
description = "Example demonstrating Reforge SDK with structlog"
authors = ["Reforge"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
sdk-reforge = {path = "../../", develop = true, extras = ["structlog"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
